Enhance CSV export to use dynamic headers and customizable formatting based on settings